--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/StartupMap.StartupMap
 EditorStartupMap=/Game/Maps/StartupMap.StartupMap
-GlobalDefaultGameMode=/Game/Blueprints/Game/BP_AuraGameMode.BP_AuraGameMode_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
