5-12 Aura Asset Manager: I created the AuraAssetManager which is where I initialized my AuraGameplayTags class function FAuraGameplayTags::IntializenativeGampleTags(). I could see in project settings gameplaytags that the armor tag shows as native C++ and the other tags do not. I also added the asset manager in the defaultengine.ini config file. Lastly I tested out if the tags singelton worked by calling the static function in ASC class in AbilityActorInfo.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -6,7 +6,7 @@ AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
 InvalidTagCharacters="\"\',"
-+GameplayTagTableList=/Game/Blueprints/AbilitySystem/GameplayTags/DT_PrimaryAttributes.DT_PrimaryAttributes
++GameplayTagTableList=None
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="Amount of Damage a player can take before death")
