Migrated Aura Project to Unreal 5.3.1 and fixed most of the bugs.

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -5,8 +5,7 @@ ClearInvalidTags=False
 AllowEditorTagUnloading=True
 AllowGameTagUnloading=False
 FastReplication=False
-InvalidTagCharacters="\"\',"
-+GameplayTagTableList=None
+InvalidTagCharacters=
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="Amount of Damage a player can take before death")
