--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,6 +11,7 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Attributes.Vital.Health",DevComment="Amount of Damage a player can take before death")
 +GameplayTagList=(Tag="Attributes.Vital.Mana",DevComment="a resource used to cast")
 +GameplayTagList=(Tag="Event.Montage.FireBolt",DevComment="")
++GameplayTagList=(Tag="GameplayCue.MeleeImact",DevComment="")
 +GameplayTagList=(Tag="Message.HealthCrystal",DevComment="")
 +GameplayTagList=(Tag="Message.HealthPotion",DevComment="")
 +GameplayTagList=(Tag="Message.ManaCrystal",DevComment="")
