added abilitysystem to true in defaultgame.ini per discord

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -6,3 +6,6 @@ CopyrightNotice=CopyRight Red Project
 
 [/Script/GameplayAbilities.AbilitySystemGlobals]
 +AbilitySystemGlobalsClassName="/Script/Aura.AuraAbilitySystemGlobals"
+
+[/Script/GameplayAbilities.AbilitySystemGlobals]
+bUseDebugTargetFromHud=true
